# language_tutor

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  styles.tcss  writing_tutor.py
languages/: __init__.py  polish.py  portuguese.py
src/language_tutor/: __init__.py  app.py  app_controller.py  async_runner.py  cli.py  config.py  exercise.py  feedback_handler.py  gui.py  gui_app.py  gui_qml.py  llm.py  qa.py  state.py  styles.css  styles.tcss  utils.py
src/language_tutor/gui_screens/: __init__.py  qa_dialog.py  settings_dialog.py  wiktionary_dialog.py
src/language_tutor/languages/: __init__.py  english.py  polish.py
src/language_tutor/llms/: __init__.py  base.py  lite.py  openai_impl.py
src/language_tutor/qml/: __init__.py  main.qml
src/language_tutor/qml/dialogs/: QADialog.qml  SettingsDialog.qml  WiktionaryDialog.qml
src/language_tutor/screens/: __init__.py  qa_screen.py  settings_screen.py
tests/: test_app_controller.py  test_async_utils.py  test_cli.py  test_config.py  test_exercise_generation.py  test_exercise_types.py  test_feedback_handler.py  test_file_sync.py  test_language_modules.py  test_llm_integration.py  test_openai_llm.py  test_qa_functionality.py  test_qml_app.py  test_state_comprehensive.py  test_state_export.py  test_utils.py  test_version.py  test_wiktionary_url.py
