[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-tutor"
version = "0.1.0"
description = "A language tutor app for writing exercises"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Author"}
]
dependencies = [
    "litellm>=1.67.2",
    "nest-asyncio>=1.6.0",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.1.0",
    "toml>=0.10.2",
]

[project.scripts]
language-tutor-ui = "language_tutor.gui:main"


[project.urls]
Homepage = "https://github.com/username/language-tutor"
Issues = "https://github.com/username/language-tutor/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "language_tutor",
    "language_tutor.languages",
    "language_tutor.gui_screens",
    "language_tutor.llms",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
